<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dip">

    <TextView
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/playerName"
            android:layout_alignParentStart="true" android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/black"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_thumb_up"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true" android:id="@+id/imageResult"
            android:contentDescription="@string/thumbs"/>
    <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" android:id="@+id/date" android:layout_alignParentRight="true"
            tools:ignore="RelativeOverlap"/>

</RelativeLayout>