<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/turn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/playerTurn"
            app:layout_constraintTop_toTopOf="@+id/guest" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/guest"/>
    <TextView
            android:text="@string/guest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/guest"
            app:layout_constraintStart_toEndOf="@+id/playerTurn"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/player"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/guest"
            app:layout_constraintStart_toEndOf="@+id/playerTurn"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline20v"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.2"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline40v"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.4"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline60v"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.6"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline80v"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.8"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline5h"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.05"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline35h"
                                          android:orientation="vertical" app:layout_constraintGuide_percent="0.35"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline65h"
                                          android:orientation="vertical" app:layout_constraintGuide_percent="0.65"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline95h"
                                          android:orientation="vertical" app:layout_constraintGuide_percent="0.95"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/caseTopLeft"
            app:layout_constraintTop_toTopOf="@+id/guideline20v"
            app:layout_constraintBottom_toTopOf="@+id/guideline40v"
            app:layout_constraintStart_toStartOf="@+id/guideline5h"
            app:layout_constraintEnd_toStartOf="@+id/guideline35h"
            android:background="@drawable/gamecase"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/caseTopMid"
            app:layout_constraintTop_toTopOf="@+id/guideline20v"
            app:layout_constraintBottom_toTopOf="@+id/guideline40v"
            app:layout_constraintEnd_toStartOf="@+id/guideline65h"
            app:layout_constraintStart_toStartOf="@+id/guideline35h"
            android:background="@drawable/gamecase"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/caseTopRight"
            app:layout_constraintTop_toTopOf="@+id/guideline20v"
            app:layout_constraintStart_toStartOf="@+id/guideline65h"
            app:layout_constraintEnd_toStartOf="@+id/guideline95h"
            app:layout_constraintBottom_toTopOf="@+id/guideline40v"
            android:background="@drawable/gamecase"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/caseMidLeft"
            app:layout_constraintTop_toTopOf="@+id/guideline40v"
            app:layout_constraintBottom_toTopOf="@+id/guideline60v"
            app:layout_constraintEnd_toStartOf="@+id/guideline35h"
            app:layout_constraintStart_toStartOf="@+id/guideline5h"
            android:background="@drawable/gamecase"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/caseMidMid"
            app:layout_constraintTop_toTopOf="@+id/guideline40v"
            app:layout_constraintBottom_toTopOf="@+id/guideline60v"
            app:layout_constraintEnd_toStartOf="@+id/guideline65h"
            app:layout_constraintStart_toStartOf="@+id/guideline35h"
            android:background="@drawable/gamecase"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/caseMidRight"
            app:layout_constraintTop_toTopOf="@+id/guideline40v"
            app:layout_constraintBottom_toTopOf="@+id/guideline60v"
            app:layout_constraintStart_toStartOf="@+id/guideline65h"
            app:layout_constraintEnd_toStartOf="@+id/guideline95h"
            android:background="@drawable/gamecase"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/caseBotLeft"
            app:layout_constraintTop_toTopOf="@+id/guideline60v"
            app:layout_constraintBottom_toTopOf="@+id/guideline80v"
            app:layout_constraintStart_toStartOf="@+id/guideline5h"
            app:layout_constraintEnd_toStartOf="@+id/guideline35h"
            android:background="@drawable/gamecase"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/caseBotMid"
            app:layout_constraintTop_toTopOf="@+id/guideline60v"
            app:layout_constraintBottom_toTopOf="@+id/guideline80v"
            app:layout_constraintStart_toStartOf="@+id/guideline35h"
            app:layout_constraintEnd_toStartOf="@+id/guideline65h"
            android:background="@drawable/gamecase"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/caseBotRight"
            app:layout_constraintTop_toTopOf="@+id/guideline60v"
            app:layout_constraintBottom_toTopOf="@+id/guideline80v"
            app:layout_constraintStart_toStartOf="@+id/guideline65h"
            app:layout_constraintEnd_toStartOf="@+id/guideline95h"
            android:background="@drawable/gamecase"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center"
    />
</android.support.constraint.ConstraintLayout>